added an empty hw component

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+<head>
+    <script type="module" src="hwwc.js"></script>
+</head>
+<body>
     <p>
-        Hello World
+        Hello World:
     </p>
+    <HelloWorld>xxx</HelloWorld>
+</body>
 </html>
