use thing attribute

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <p>
         Hello World:
     </p>
-    <hello-world>xxx</hello-world>
+    <hello-world thing="xxx">not rendering</hello-world>
 </body>
 </html>
